# Runeforge

./: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  IMPROVEMENT_BACKLOG.md  README.md  SECURITY_REVIEW.md  SOFTWARE_ASSURANCE_REPORT.md  SPEC.md  acceptance_map.json  module_done.yaml
.cargo/: audit.toml
.github/workflows/: cargo-check-matrix.yml  chaos-testing.yml  ci.yml  coverage.yml  fuzz.yml  sbom.yml
benches/: selection_bench.rs
docs/: OBSERVABILITY.md
examples/: baseline.yaml  compliance.yaml  latency.yaml  observability_demo.rs
fixtures/: expected_output.json  integration_test.yaml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: blueprint_parser.rs  selector.rs  stack_plan_validation.rs
resources/: rules.yaml
schemas/: blueprint.schema.json  stack.schema.json
src/: lib.rs  main.rs  metrics_handler.rs  observability.rs  schema.rs  selector.rs  test_utils.rs  util.rs
src/ports/: env.rs  io.rs
tests/: acceptance.rs  fault_injection.rs  proptest_tests.proptest-regressions  proptest_tests.rs
tests/acceptance/: README.md  mod.rs  test_constraints.rs  test_determinism.rs  test_output_validation.rs  test_schema_validation.rs  test_scoring_algorithm.rs
tests/acceptance/fixtures/: high_rps.yaml  invalid_missing_required.yaml  invalid_schema_type.yaml  test_preferences.yaml  valid_baseline.yaml  valid_compliance_heavy.yaml  valid_cost_constraint.yaml  valid_latency_sensitive.yaml  valid_minimal.yaml  valid_region_constraint.yaml
