[package]
name = "runeforge"
version = "0.1.0"
edition = "2021"
rust-version = "1.82"
authors = ["Runeforge Team"]
description = "A CLI tool that reads Blueprint requirements and returns optimal technology stack as JSON"
repository = "https://github.com/example/runeforge"
license = "MIT OR Apache-2.0"

[features]
default = ["std"]
std = []

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
schemars = "0.8"
rand = "0.8"
sha2 = "0.10"
hex = "0.4"
thiserror = "1.0"
anyhow = "1.0"
async-trait = "0.1"

[dev-dependencies]
tempfile = "3"
insta = "1.40"
proptest = "1.5"
jsonschema = "0.17"

[[bin]]
name = "runeforge"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.test]
opt-level = 0
debug = true