[package]
name = "runeforge"
version = "0.1.0"
edition = "2021"
rust-version = "1.82"
authors = ["Runeforge Team"]
description = "A CLI tool that reads Blueprint requirements and returns optimal technology stack as JSON"
repository = "https://github.com/example/runeforge"
license = "MIT OR Apache-2.0"

[features]
default = ["std"]
std = ["thiserror", "clap", "serde_yaml", "schemars", "rand", "anyhow"]

[dependencies]
clap = { version = "4.5", features = ["derive"], optional = true }
serde = { version = "1", features = ["derive", "alloc"], default-features = false }
serde_json = { version = "1", features = ["alloc"], default-features = false }
serde_yaml = { version = "0.9", optional = true }
schemars = { version = "0.8", optional = true }
rand = { version = "0.8", optional = true }
sha2 = { version = "0.10", default-features = false }
hex = { version = "0.4", default-features = false, features = ["alloc"] }
thiserror = { version = "1.0", optional = true }
anyhow = { version = "1.0", optional = true }
async-trait = "0.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
tempfile = "3"
insta = "1.40"
proptest = "1.5"
jsonschema = "0.17"
criterion = "0.5"

[[bench]]
name = "selection_bench"
harness = false

[[bin]]
name = "runeforge"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.test]
opt-level = 0
debug = true